Fix command line not showing transmit state.

--- a/mobile_sacn_webui/src/transmit/control/Control.scss
+++ b/mobile_sacn_webui/src/transmit/control/Control.scss
@@ -17,13 +17,13 @@
   font-family: monospace;
   color: $gray-600;
 
-  &.active {
-    color: $green;
-  }
-
   .msacn-cmdline-token {
     @extend .mx-1;
   }
+}
+
+.msacn-keypad.active .msacn-cmdline {
+  color: $green;
 }
 
 .msacn-keypad table {
